// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasToken returns canonical protocol contract 1`] = `
{
  "address": AztecAddress {
    "asBigInt": 7937916666368800582224639913476584336700884738258992124509449920134347011536n,
    "asBuffer": {
      "data": [
        17,
        140,
        179,
        157,
        57,
        179,
        98,
        236,
        195,
        150,
        227,
        169,
        117,
        232,
        118,
        254,
        236,
        14,
        253,
        171,
        6,
        95,
        62,
        198,
        68,
        28,
        136,
        204,
        80,
        96,
        181,
        208,
      ],
      "type": "Buffer",
    },
  },
  "instance": {
    "address": AztecAddress {
      "asBigInt": 7937916666368800582224639913476584336700884738258992124509449920134347011536n,
      "asBuffer": {
        "data": [
          17,
          140,
          179,
          157,
          57,
          179,
          98,
          236,
          195,
          150,
          227,
          169,
          117,
          232,
          118,
          254,
          236,
          14,
          253,
          171,
          6,
          95,
          62,
          198,
          68,
          28,
          136,
          204,
          80,
          96,
          181,
          208,
        ],
        "type": "Buffer",
      },
    },
    "contractClassId": Fr {
      "asBigInt": 2419772933687143618367109239029968919800251985793719714695493618209366655474n,
      "asBuffer": {
        "data": [
          5,
          89,
          138,
          254,
          125,
          46,
          165,
          1,
          206,
          188,
          113,
          27,
          34,
          100,
          204,
          77,
          97,
          167,
          37,
          49,
          8,
          112,
          54,
          139,
          15,
          182,
          171,
          111,
          217,
          178,
          193,
          242,
        ],
        "type": "Buffer",
      },
    },
    "initializationHash": Fr {
      "asBigInt": 5411687428194306823799197943510367074755080310726877398642044502900791103391n,
      "asBuffer": {
        "data": [
          11,
          246,
          232,
          18,
          241,
          75,
          176,
          41,
          247,
          203,
          156,
          141,
          168,
          54,
          125,
          217,
          124,
          6,
          142,
          120,
          141,
          79,
          33,
          0,
          127,
          217,
          112,
          20,
          235,
          168,
          207,
          159,
        ],
        "type": "Buffer",
      },
    },
    "portalContractAddress": EthAddress {
      "buffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "type": "Buffer",
      },
    },
    "publicKeysHash": Fr {
      "asBigInt": 17954372136461894568820199868962143715279932924957662285438325406238856880109n,
      "asBuffer": {
        "data": [
          39,
          177,
          208,
          131,
          154,
          91,
          35,
          186,
          241,
          42,
          141,
          25,
          91,
          24,
          172,
          40,
          143,
          207,
          64,
          26,
          251,
          47,
          112,
          184,
          164,
          181,
          41,
          237,
          229,
          250,
          159,
          237,
        ],
        "type": "Buffer",
      },
    },
    "salt": Fr {
      "asBigInt": 1n,
      "asBuffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "type": "Buffer",
      },
    },
    "version": 1,
  },
}
`;

exports[`GasToken returns canonical protocol contract 2`] = `
{
  "artifactHash": Fr {
    "asBigInt": 3363571886208995000060653132822906490593381833217164785427349714321114865759n,
    "asBuffer": {
      "data": [
        7,
        111,
        182,
        215,
        73,
        59,
        7,
        90,
        136,
        14,
        238,
        217,
        15,
        236,
        124,
        76,
        1,
        224,
        162,
        77,
        68,
        37,
        34,
        68,
        158,
        77,
        86,
        194,
        99,
        87,
        32,
        95,
      ],
      "type": "Buffer",
    },
  },
  "id": Fr {
    "asBigInt": 2419772933687143618367109239029968919800251985793719714695493618209366655474n,
    "asBuffer": {
      "data": [
        5,
        89,
        138,
        254,
        125,
        46,
        165,
        1,
        206,
        188,
        113,
        27,
        34,
        100,
        204,
        77,
        97,
        167,
        37,
        49,
        8,
        112,
        54,
        139,
        15,
        182,
        171,
        111,
        217,
        178,
        193,
        242,
      ],
      "type": "Buffer",
    },
  },
  "privateFunctions": [
    {
      "isInternal": false,
      "selector": FunctionSelector {
        "value": 2432309179,
      },
      "vkHash": Fr {
        "asBigInt": 0n,
        "asBuffer": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "privateFunctionsRoot": Fr {
    "asBigInt": 8909521279374546913798331365196924937704969493731099782202223186665436350504n,
    "asBuffer": {
      "data": [
        19,
        178,
        156,
        63,
        74,
        150,
        235,
        20,
        213,
        211,
        83,
        154,
        99,
        8,
        255,
        151,
        54,
        173,
        93,
        103,
        227,
        246,
        31,
        251,
        183,
        218,
        144,
        142,
        20,
        152,
        8,
        40,
      ],
      "type": "Buffer",
    },
  },
  "publicBytecodeCommitment": Fr {
    "asBigInt": 11910349144087262869803066244361854314170508972257646677360065797155380495418n,
    "asBuffer": {
      "data": [
        26,
        85,
        4,
        203,
        5,
        85,
        52,
        242,
        9,
        37,
        62,
        199,
        149,
        156,
        1,
        74,
        95,
        102,
        55,
        172,
        27,
        229,
        117,
        211,
        162,
        207,
        6,
        191,
        89,
        111,
        132,
        58,
      ],
      "type": "Buffer",
    },
  },
  "version": 1,
}
`;

exports[`GasToken returns canonical protocol contract 3`] = `
[
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 190347739,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1776307709,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1811750235,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 3422298534,
    },
  },
]
`;
